# fast-ocr-server

./: .dockerignore  .gitignore  Dockerfile  ML_MICROSERVICE.md  README.md  after-uv-install.sh  main.py  pyproject.toml  start-server.sh
